tests/snapshots/test_uigen_gadget__gadget_property_read_expr.snap
---
source: tests/test_uigen_gadget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QLabel *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupLabelText();
        this->updateLabelText();
    }

private:
    enum class BindingIndex : unsigned {
        LabelText,
    };

    void setupLabelText()
    {
        QObject::connect(this->ui_->fontEdit, &QFontComboBox::currentFontChanged, this->root_, [this]() { this->updateLabelText(); });
    }

    void updateLabelText()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::LabelText);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->root_->setText(this->evalLabelText());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QString evalLabelText() const
    {
        QFont a0;
        QString a1;
    b0:
        a0 = this->ui_->fontEdit->currentFont();
        a1 = a0.family();
        return a1;
    }

    QLabel *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

