tests/snapshots/test_uigen_gadget__gadget_property_write_expr.snap
---
source: tests/test_uigen_gadget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QLabel *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupLabelFont();
        this->updateLabelFont();
    }

private:
    enum class BindingIndex : unsigned {
        LabelFont,
    };

    void setupLabelFont()
    {
        QObject::connect(this->ui_->fontEdit, &QFontComboBox::currentFontChanged, this->root_, [this]() { this->updateLabelFont(); });
        QObject::connect(this->ui_->sizeEdit, &QSpinBox::valueChanged, this->root_, [this]() { this->updateLabelFont(); });
    }

    void updateLabelFont()
    {
#ifndef QT_NO_DEBUG
        constexpr unsigned index = static_cast<unsigned>(BindingIndex::LabelFont);
        Q_ASSERT_X(!(this->bindingGuard_[index >> 5] & (1U << (index & 0x1f))), __func__, "binding loop detected");
        this->bindingGuard_[index >> 5] |= (1U << (index & 0x1f));
#endif
        this->root_->setFont(this->evalLabelFont());
#ifndef QT_NO_DEBUG
        this->bindingGuard_[index >> 5] &= ~(1U << (index & 0x1f));
#endif
    }

    QFont evalLabelFont() const
    {
        QFont a0;
        QFont a1;
        int a2;
    b0:
        a0 = this->ui_->fontEdit->currentFont();
        a1 = a0;
        a2 = this->ui_->sizeEdit->value();
        a1.setPointSize(a2);
        return a1;
    b1:
        Q_UNREACHABLE();
    }

    QLabel *const root_;
    Ui::MyType *const ui_;
#ifndef QT_NO_DEBUG
    quint32 bindingGuard_[1] = {0};
#endif

};
} // namespace UiSupport

