tests/snapshots/test_uigen_gadget__string_list_subscript.snap
---
source: tests/test_uigen_gadget.rs
expression: ui_support_h
---
#pragma once
#include "ui_mytype.h"

namespace UiSupport {
class MyType
{
public:
    MyType(QTextBrowser *root, Ui::MyType *ui): root_(root), ui_(ui) {}

    void setup()
    {
        this->setupPushButtonClicked();
    }

private:
    enum class BindingIndex : unsigned {
    };

    void setupPushButtonClicked()
    {
        QObject::connect(this->ui_->pushButton, QOverload<bool>::of(&QAbstractButton::clicked), this->root_, [this]() { this->onPushButtonClicked(); });
    }

    void onPushButtonClicked()
    {
        QStringList a0;
        QStringList a1;
        QString a2;
    b0:
        a0 = this->root_->searchPaths();
        a1 = a0;
        a2 = a1.at(1);
        a1[0] = a2;
        this->root_->setSearchPaths(a1);
        return;
    }

    struct PropertyObserver
    {
        QMetaObject::Connection connection;
        QObject *object = nullptr;
    };

    QTextBrowser *const root_;
    Ui::MyType *const ui_;

};
} // namespace UiSupport

